Get the list of players who have joined the game from firebase.
Once users join on the phone, we will remove the option to add
players from the web app.

--- a/app/partials/start.html
+++ b/app/partials/start.html
@@ -11,5 +11,9 @@
   <div>
     <h3>Current players</h3>
     <div ng-repeat="player in players">{{player.name}}</div>
+    <form>
+      <input placeholder="Name..." ng-model="newPlayer">
+      <button type="submit" ng-click="addPlayer(newPlayer);newPlayer = null;">add</button>
+    </form>
   </div>
 </div>
