Button to create a new room

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -5,5 +5,8 @@
 
 <input ng-model="syncedValue.$value" type="text" ng-change="syncedValue.$save()" /> <b>{{syncedValue.$value}}</b>
 
-<p>Open <a ng-href="{{FBURL}}/syncedValue" target="_blank">Forge</a> or a <a target="_blank" href="#/">new window</a> to see this input update in real time.</p>
+<button ng-click="newRoom()">Create new room</button>
 
+<p>Room number: {{roomId}}</p>
+
+<p>Open <a ng-href="{{FBURL}}/syncedValue" target="_blank">Forge</a> or a <a target="_blank" href="#/">new window</a> to see this input update in real time.</p>
