--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -7,9 +7,10 @@
   <div class="progressPanel">
     <p>Game {{code}} in progress!</p>
     <table>
-      <tr ng-repeat="player in scores">
-        <td>{{player.name}}</td>
-        <td>{{player.score}}</td>
+      <tr ng-repeat="player in players">
+        <!--<td>{{player.name}}</td>
+        <td>{{player.score}}</td>-->
+        <td>{{player.$value}}</td>
       </tr>
     </table>
   </div>
