--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -8,9 +8,8 @@
     <p>Game {{code}} in progress!</p>
     <table>
       <tr ng-repeat="player in players">
-        <!--<td>{{player.name}}</td>
-        <td>{{player.score}}</td>-->
         <td>{{player.$value}}</td>
+        <td>{{player.$id}}</td>
       </tr>
     </table>
   </div>
