new game: shake

--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -1,7 +1,7 @@
 <div class="gameContainer">
   <div class="gamePanel">
     <button-click-game ng-show="currentGame == 'BUTTON_CLICK'"></button-click-game>
-    <go-far-game ng-show="currentGame == 'GO_FAR'"></go-far-game>
+    <shake-game ng-show="currentGame == 'SHAKE'"></shake-game>
   </div>
 
   <div class="progressPanel">
