--- a/app/partials/start.html
+++ b/app/partials/start.html
@@ -1,10 +1,11 @@
 <div class='startContainer'>
   <div>
-    <p>Generate a code to start a new game</p>
+    <p>Enter this code on the phones to join the game.</p>
     <div ng-show="code != null" data-ng-init="init()">
       <div class='gameCode'>{{code}}</div>
       <div>Once players has joined the game, click start</div>
       <button ng-click="start()" class="startButton">Start</button>
+      <button ng-click="addDummyPlayers()">Add dummy players</button>
     </div>
   </div>
   <div>
