Update games to use player.name

--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -9,8 +9,7 @@
     <p>type: {{gameType.$value}}</p>
     <table>
       <tr ng-repeat="player in players">
-        <td>{{player.$value}}</td>
-        <td>{{player.$id}}</td>
+        <td>{{player.name}}</td>
       </tr>
     </table>
   </div>
