--- a/app/partials/games/shake.html
+++ b/app/partials/games/shake.html
@@ -3,7 +3,7 @@
   <table>
     <table>
       <tr ng-repeat="player in players">
-        <td>{{player.$value}}</td>
+        <td>{{player.name}}</td>
         <td>{{gameData.players[player.$id]}}</td>
       </tr>
     </table>
