--- a/app/partials/games/tap.html
+++ b/app/partials/games/tap.html
@@ -3,7 +3,7 @@
   <table>
     <table>
       <tr ng-repeat="player in players">
-        <td>{{player.$value}}</td>
+        <td>{{player.name}}</td>
         <td>{{gameData.players[player.$id]}}</td>
         <td><span ng-repeat="n in range(0, gameData.players[player.$id])">x</span></td>
       </tr>
