--- a/app/css/app.css
+++ b/app/css/app.css
@@ -37,3 +37,14 @@
 .startButton {
   display: block;
 }
+
+.player {
+    text-align: center;
+}
+
+.face {
+  border-radius: 30px;
+  border: 1px solid #ddd;
+  width: 48px;
+  margin: 16px;
+}
