--- a/app/partials/start.html
+++ b/app/partials/start.html
@@ -4,16 +4,19 @@
     <div ng-show="code != null" data-ng-init="init()">
       <div class='gameCode'>{{code}}</div>
       <div>Once players has joined the game, click start</div>
-      <button ng-click="start()" class="startButton">Start</button>
-      <button ng-click="addDummyPlayers()">Add dummy players</button>
+      <button ng-click="start()" class="startButton" ng-show="players.length > 1">Start</button>
     </div>
   </div>
+
   <div>
-    <h3>Current players</h3>
-    <div ng-repeat="player in players">{{player.name}}</div>
-    <form>
-      <input placeholder="Name..." ng-model="newPlayer">
-      <button type="submit" ng-click="addPlayer(newPlayer);newPlayer = null;">add</button>
-    </form>
+    <div ng-repeat="player in players" class="player">
+      <img ng-src="{{player.imageUrl}}" class="face"/><br>
+      <b>{{player.name}}</b>
+    </div>
+    <div ng-show="players.length == 0">
+      No one has joined yet.
+      <button ng-click="addDummyPlayers()">Add dummy players for testing</button>
+    </div>
   </div>
+
 </div>
