Fix showing the game type.

--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -6,7 +6,7 @@
 
   <div class="progressPanel">
     <p>Game {{code}} in progress!</p>
-    <p>type: {{gameType.$value}}</p>
+    <p>type: {{gameMetadata.type}}</p>
     <table>
       <tr ng-repeat="player in players">
         <td>{{player.name}}</td>
