animate new player faces

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -40,6 +40,19 @@
 
 .player {
     text-align: center;
+    width: 100px;
+    float:right;
+}
+
+
+.player.ng-enter {
+  -webkit-transition: all linear 1s;
+  transition: all linear 1s;
+  opacity:0;
+}
+
+.player.ng-enter.ng-enter-active {
+  opacity:1;
 }
 
 .face {
@@ -47,4 +60,13 @@
   border: 1px solid #ddd;
   width: 48px;
   margin: 16px;
+}
+
+.player.ng-enter .face {
+  transition:all linear 0.5s;
+  transform: translateX(-50px) rotate(-90deg);
+}
+.player.ng-enter.ng-enter-active .face {
+  opacity:1;
+  transform: translateX(0) rotate(0) ;
 }
