Update scores on game completion.
Each game now must register with a start function that returns a promise
which resolves to the list of winners for that game when completed. We
then update the score of the winning players.

--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -10,6 +10,7 @@
     <table>
       <tr ng-repeat="player in players">
         <td>{{player.name}}</td>
+        <td>{{player.score}}</td>
       </tr>
     </table>
   </div>
