--- a/app/css/app.css
+++ b/app/css/app.css
@@ -70,3 +70,9 @@
   opacity:1;
   transform: translateX(0) rotate(0) ;
 }
+
+.progressPanel {
+  background-color: rgb(206, 228, 225);
+  border: 2px solid rgb(140, 166, 163);
+  border-radius: 3px;
+}
