--- a/app/css/app.css
+++ b/app/css/app.css
@@ -41,7 +41,7 @@
 .player {
     text-align: center;
     width: 100px;
-    float:right;
+    float: right;
 }
 
 
@@ -75,4 +75,5 @@
   background-color: rgb(206, 228, 225);
   border: 2px solid rgb(140, 166, 163);
   border-radius: 3px;
+  text-align: center;
 }
