Consolidate all game data/metadata fetching into one service.

--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -1,8 +1,8 @@
 <div class="gameContainer">
   <div class="gamePanel">
-    <waiting-screen ng-show="gameMetadata.type == ''"></waiting-screen>
-    <tap-game ng-show="gameMetadata.type == 'tap'"></tap-game>
-    <shake-game ng-show="gameMetadata.type == 'shake'"></shake-game>
+    <waiting-screen ng-show="gameDataService.getType() == ''"></waiting-screen>
+    <tap-game ng-show="gameDataService.getType() == 'tap'"></tap-game>
+    <shake-game ng-show="gameDataService.getType() == 'shake'"></shake-game>
   </div>
 
   <div class="progressPanel">
