--- a/app/partials/games/tap.html
+++ b/app/partials/games/tap.html
@@ -4,6 +4,7 @@
     <tr ng-repeat="player in players">
       <td><b>{{player.name}}</b></td>
       <td>
+        <span class="finishingLine">&nbsp;</span>
         <img ng-src="{{player.imageUrl}}" class="face"
              style="margin-left: {{(gameData.players[player.$id]||0)*20}}px;
                     transform: rotate({{gameData.players[player.$id]*15}}deg);
