Screen when game is over

--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -1,6 +1,7 @@
 <div class="gameContainer">
   <div class="gamePanel">
     <waiting-screen ng-show="gameDataService.getType() == ''"></waiting-screen>
+    <end-screen ng-show="gameDataService.getType() == 'end'"></end-screen>
     <tap-game ng-show="gameDataService.getType() == 'tap'"></tap-game>
     <shake-game ng-show="gameDataService.getType() == 'shake'"></shake-game>
   </div>
