--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,42 +1,34 @@
-/* app css stylesheet */
+/* common CSS classes used along the app */
+
+.temp-buttons {
+  position: absolute;
+  top: 0;
+  left: 0px;
+}
+
+html, body
+{
+  height: 100%;
+  font-family: RobotoDraft, Roboto, sans-serif;
+}
 
 .page {
-  margin: 20px;
+  height: 100%;
 }
 
-.startContainer {
-  display: flex;
-}
-
-.startContainer > div {
-  flex: 1;
-}
-
-.gameContainer {
-  display: flex;
-}
-
-.gameContainer > div {
-  flex: 1;
-}
-
-.gameCode {
-  padding: 20px;
-  background-color: rgb(206, 228, 225);
-  border: 2px solid rgb(140, 166, 163);
-  border-radius: 3px;
-  font-size: 24px;
-  display: inline-block;
-  margin: 20px 0;
-}
-
-.generateButton {
+/* material design class effect*/
+.card {
+  border-radius: 2px;
+  background: white;
   display: block;
+  box-sizing: border-box;
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+  margin: 8px;
+  padding: 8px;
 }
 
-.startButton {
-  display: block;
-}
+
+
 
 .player {
     text-align: center;
@@ -44,6 +36,12 @@
     float: right;
 }
 
+.face {
+  border-radius: 30px;
+  border: 1px solid #ddd;
+  width: 48px;
+  margin: 16px;
+}
 
 .player.ng-enter {
   -webkit-transition: all linear 1s;
@@ -55,13 +53,6 @@
   opacity:1;
 }
 
-.face {
-  border-radius: 30px;
-  border: 1px solid #ddd;
-  width: 48px;
-  margin: 16px;
-}
-
 .player.ng-enter .face {
   transition:all linear 0.5s;
   transform: translateX(-50px) rotate(-90deg);
@@ -69,11 +60,4 @@
 .player.ng-enter.ng-enter-active .face {
   opacity:1;
   transform: translateX(0) rotate(0) ;
-}
-
-.progressPanel {
-  background-color: rgb(206, 228, 225);
-  border: 2px solid rgb(140, 166, 163);
-  border-radius: 3px;
-  text-align: center;
 }
