progress bar in waiting screen

--- a/app/partials/games/waiting.html
+++ b/app/partials/games/waiting.html
@@ -1,4 +1,8 @@
+<div style="width: 100%; text-align: center">
 
 <h2>Get ready!</h2>
 
-<h2>{{countdown}}</h2>
+<div class="loading" style="background-color: rgb(255, {{countdown*10}}, 0);
+                            width: {{countdown*20}}px;">&nbsp;</div>
+
+</div>
