--- a/app/css/game.css
+++ b/app/css/game.css
@@ -19,3 +19,11 @@
   width: 10px;
   background-color: #000;
 }
+
+.loading {
+  transition:all linear 0.1s;
+  box-shadow: 5px 5px 5px #888888;
+  background-color: #f00;
+  border-radius: 25px;
+  margin: 0 auto;
+}
