--- a/app/css/start.css
+++ b/app/css/start.css
@@ -30,27 +30,27 @@
 }
 
 
-.player {
+.startContainer .player {
     text-align: center;
     width: 100px;
     height: 100px;
 }
 
-.player.ng-enter {
+.startContainer .player.ng-enter {
   transition: opacity cubic-bezier(.4,0,.2,1) 1s, width cubic-bezier(.4,0,.2,1) 0.5s , height cubic-bezier(.4,0,.2,1) 0.5s;
   opacity:0;
   width: 0;
 }
 
-.player.ng-enter.ng-enter-active {
+.startContainer .player.ng-enter.ng-enter-active {
   opacity:1;
   width: 100px;
 }
 
-.player.ng-enter .face {
+.startContainer .player.ng-enter .face {
   transition:transform cubic-bezier(.4,0,.2,1) 0.5s ;
   transform: translateX(100px) rotate(120deg);
 }
-.player.ng-enter.ng-enter-active .face {
+.startContainer .player.ng-enter.ng-enter-active .face {
   transform: translateX(0) rotate(0) ;
 }
