small style change in waiting screen

--- a/app/partials/games/waiting.html
+++ b/app/partials/games/waiting.html
@@ -3,6 +3,6 @@
 <h2>Get ready!</h2>
 
 <div class="loading" style="background-color: rgb(255, {{countdown*10}}, 0);
-                            width: {{countdown*20}}px;">&nbsp;</div>
+                            width: {{countdown*3}}%;">&nbsp;</div>
 
 </div>
