--- a/app/partials/start.html
+++ b/app/partials/start.html
@@ -1,5 +1,9 @@
 <div class='startContainer'>
 
+  <div class="logo">
+    <img src="img/trophee.svg" />
+  </div>
+
   <div class="player-container">
     <div ng-repeat="player in players" class="player">
       <img ng-src="{{player.imageUrl}}" class="face"/><br>
