--- a/app/partials/games/waiting.html
+++ b/app/partials/games/waiting.html
@@ -1,8 +1,26 @@
 <div style="width: 100%; text-align: center">
 
-<h2>Get ready!</h2>
+  <div ng-show="countdown < 30">
+    <h2>Get ready!</h2>
 
-<div class="loading" style="background-color: rgb(255, {{countdown*10}}, 0);
-                            width: {{countdown*3}}%;">&nbsp;</div>
+    <div class="loading" style="background-color: rgb(255, {{countdown*10}}, 0);
+                                width: {{countdown*3}}%;">&nbsp;</div>
+  </div>
+
+  <div align="center">
+    <h2>Ranking</h2>
+
+    <table class="ranking">
+      <tr ng-repeat="player in players | orderBy:'score || 0'" class="player">
+        <td>
+          <b>{{$index+1}}</b>
+          <img ng-src="{{player.imageUrl}}" class="face"/>
+        </td>
+        <td><b>{{player.name}}</b></td>
+        <td align="right"><b>{{player.score || 0}}</b>
+      </tr>
+    </table>
+
+  </div>
 
 </div>
