--- a/app/css/start.css
+++ b/app/css/start.css
@@ -8,9 +8,19 @@
   height: 100%;
 }
 
+.startContainer .header {
+  width: 100%;
+  background-color: #FFC107;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
 .startContainer .logo {
-  /* our image is too large */
-  margin-bottom: -50px;
+  background: url("../img/trophee.svg") center center;
+  width: 180px;
+  height: 180px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .startContainer .player-container {
@@ -37,19 +47,19 @@
 
 .startContainer .player {
     text-align: center;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
 }
 
 .startContainer .player.ng-enter {
-  transition: opacity cubic-bezier(.4,0,.2,1) 1s, width cubic-bezier(.4,0,.2,1) 0.5s , height cubic-bezier(.4,0,.2,1) 0.5s;
+  transition: opacity cubic-bezier(.4,0,.2,1) 1s, width cubic-bezier(.4,0,.2,1) 0.5s;
   opacity:0;
   width: 0;
 }
 
 .startContainer .player.ng-enter.ng-enter-active {
   opacity:1;
-  width: 100px;
+  width: 150px;
 }
 
 .startContainer .player.ng-enter .face {
