--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -1,7 +1,7 @@
 <div class="gameContainer">
   <div class="gamePanel">
-    <waiting-screen ng-show="gameDataService.isWaiting()"></waiting-screen>
     <end-screen ng-show="gameDataService.isDone()"></end-screen>
+    <waiting-screen ng-show="gameDataService.isWaiting() || gameDataService.isDone()"></waiting-screen>
     <div ng-show="gameDataService.isPlaying()">
       <tap-game ng-show="gameDataService.getType() == 'tap'"></tap-game>
       <shake-game ng-show="gameDataService.getType() == 'shake'"></shake-game>
