Show winners of previous game

--- a/app/partials/games/waiting.html
+++ b/app/partials/games/waiting.html
@@ -11,6 +11,14 @@
     <h2>End of game</h2>
   </div>
 
+  <div ng-show="countdown > 30 && winners.length > 0">
+    <h2>Winners</h2>
+    <div ng-repeat="winner in winners">
+      <img ng-src="{{winner.imageUrl}}" class="face"/>
+      <b>{{winner.name}}</b>
+    </div>
+  </div>
+
   <div align="center">
     <h2>Ranking</h2>
 
