--- a/app/partials/start.html
+++ b/app/partials/start.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="player-container">
-    <div ng-repeat="player in players" class="player">
+    <div ng-repeat="player in players" class="player player-name-box">
       <img ng-src="{{player.imageUrl}}" class="face big"/><br>
       <b>{{player.name}}</b>
     </div>
