--- a/app/css/game.css
+++ b/app/css/game.css
@@ -1,9 +1,22 @@
 .gameContainer {
-  display: flex;
+  width: 100%;
+  padding: 40px;
 }
 
-.gameContainer > div {
-  flex: 1;
+.gameContainer h1 {
+  width: 100%;
+  text-align: center;
+  font-size: 60px;
+  font-weight: lighter;
+  margin-top: 0;
+}
+
+.gameContainer h2 {
+  width: 100%;
+  font-size: 40px;
+  font-weight: lighter;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 .finishingLine {
