--- a/app/css/game.css
+++ b/app/css/game.css
@@ -1,10 +1,8 @@
 .gameContainer {
-  width: 100%;
   padding: 40px;
 }
 
 .gameContainer h1 {
-  width: 100%;
   text-align: center;
   font-size: 60px;
   font-weight: lighter;
@@ -17,6 +15,42 @@
   font-weight: lighter;
   margin-top: 0;
   margin-bottom: 10px;
+}
+
+
+.gamePanel {
+  position: relative;
+}
+
+
+.gameContainer .game {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+
+.gameContainer .game {
+  transition: opacity cubic-bezier(.4,0,.2,1) 1s;
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.gameContainer .game.game.ng-hide-add {
+  /* Only move the slide that is being removed */
+  transition: opacity cubic-bezier(.4,0,.2,1) 1s, transform cubic-bezier(.4,0,.2,1) 1s;
+}
+.gameContainer .game.ng-hide {
+  transform: translateY(1000px);
+  opacity: 0;
+}
+.gameContainer .game.ng-hide-add, .gameContainer .game.ng-hide-remove {
+  /* this needs to be here to make it visible during the animation
+     since the .ng-hide class is already on the element rendering
+     it as hidden.
+     */
+  display:block!important;
 }
 
 .finishingLine {
