Fix redX image (use relative path instead)

--- a/app/partials/games/math.html
+++ b/app/partials/games/math.html
@@ -4,7 +4,7 @@
   <div class='mathExpression'>{{expression}}</div>
   <div class='faceRow'>
     <div ng-repeat="player in players" class="mathFaceContainer {{getStyle(player)}}">
-      <img src="/app/img/redX.png" class="mathRedX" />
+      <img src="img/redX.png" class="mathRedX" />
       <img ng-src="{{player.imageUrl}}" class="face big" />
     </div>
   </div>
