Add a color-sequence game.

--- a/app/partials/game.html
+++ b/app/partials/game.html
@@ -6,6 +6,7 @@
       <shake-game ng-show="gameDataService.getType() == 'shake'" class="game"></shake-game>
       <swipe-game ng-show="gameDataService.getType() == 'swipe'" class="game"></swipe-game>
       <math-game ng-show="gameDataService.getType() == 'math'" class="game"></math-game>
+      <sequence-game ng-show="gameDataService.getType() == 'sequence'" class="game"></sequence-game>
     </div>
   </div>
 </div>
